--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Rubik", sans-serif !important;
   -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 90vh;
+  background: #ccc;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Rubik", sans-serif !important;
+}
+
+.css-1mgfgkf-MuiPaper-root {
+  font-family: "Rubik", sans-serif !important;
+}
+
+.css-1lwaxuo-MuiPaper-root {
+  font-family: "Rubik", sans-serif !important;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: #1976d2;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+form {
+  max-height: 80vh;
+  overflow: auto;
+}
+
+.form-wrapper,
+.form-wrapper-new {
+  background-size: cover;
+  min-height: 100vh;
+  position: relative;
+}
+
+.form-wrapper {
+  background-image: url("../public/img/R.jpg");
+}
+
+.form-wrapper-new {
+  background-image: url("../public/img/new.jpg");
+}
+
+.overlay {
+  padding: 0px 20px;
+  min-height: 100vh;
+  background: #00000070;
+}
+.overlay > p {
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+  color: white;
+}
+
+.wrap-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 88vh;
+}
+.overlay form {
+  background-color: #eee;
+  padding: 20px 40px;
+  border-radius: 5px;
+  width: 50%;
+}
+.overlay form:last-child {
+  text-align: center;
+}
+
+.overlay form:last-child a:hover {
+  text-decoration: underline;
+}
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  display: flex;
+  gap: 10px;
+  justify-content: space-around;
+  box-shadow: 0px 0px 13px 0px #333;
+  margin-bottom: 10px;
+  width: 100%;
+}
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.navbar a:hover,
+.active {
+  background-color: #ddd;
+  color: black !important;
+}
+
+.pageWrapper {
+  margin-top: 10px;
+  padding: 0px 10px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.right,
+.left {
+  display: flex;
+  gap: 18px;
 }
